event listeners and function have been added for basic functionality. I would like to refactor this later and use and event.target method on a larger parent container instead of individaul event listeners.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
     <main>
         <h3>score:</h3>
         <div id="main-container">
-            <button id="flashcard"></button>
+            <button id="flashcard">
+                <ul id="flashcard-Ul">
+
+                </ul>
+            </button>
         </div>
         <div id="card-controls-container">
-            <button><</button>
-            <button>GOT IT!</button>
-            <button>></button>
+            <button id="previous-button"><</button>
+            <button id="got-it-button">GOT IT!</button>
+            <button id="next-button">></button>
         </div>
     </main>
     <footer>
