a completion counter has been added. A completion bar would be a nice touch that I may add once the mpv goals are all met

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        
     </header>
     <main>
-        <h3>score:</h3>
+        <h3><span id="completion-count">0</span> / <span id="starting-amount-of-cards"></span> Complete</h3>
         <div id="main-container">
             <button id="flashcard">
                 <ul id="flashcard-Ul">
