search bar added. It lets user add words and their definitions as a card in their current card set. The amount of cards count is updated when the add a card.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
        
     </header>
     <main>
+        <!-- <button id="random-vocab-button">Random Vocab</button> -->
+        <form id="add-word-form">
+            <input type="text" placeholder="Please type a word here!">
+            <input  type="submit">
+        </form>
         <h3><span id="completion-count">0</span> / <span id="starting-amount-of-cards"></span> Complete</h3>
         <div id="main-container">
             <button id="flashcard">
@@ -31,6 +36,9 @@
             <button id="got-it-button">GOT IT!</button>
             <button id="next-button">></button>
         </div>
+
+    <div class="modal" id="create-your-own-cards-modal">
+    </div>
     </main>
     <footer>
 
