The start of a hamburger menu has been added. I have added some extra features but did not have a plan for them in the original layout. I am going to refactor the layout design and move from there.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
 <body>
     <header>
         <h1>Flashcards</h1>
-        <nav>
+        <nav id="menu-bar">
+            <div id="menu">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+            </div>
+            <!-- this is the nav for the hamburger menu. I am going to take a step back and plan out my next layout steps before going to far down any one rabbit hole 
+                <ul>
+                <li class="nav-items"><a href="#"></a>Home</li>
+                <li><a href="#"></a>Add Cards</li>
+                <li><a href="#"></a>Login</li>
+                <li><a href="#"></a>Help</li>
+            </ul>
+        </nav> -->
+        <!-- <nav>
+
             <ul>
                 <li><a href="#">login</a></li>
                 <li><a href="#">help</a></li>
             </ul>
-        </nav>
+        </nav> -->
        
     </header>
     <main>
