Added a create your own card form so users can make their own cards with custom titles and definitions

--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
         <!-- <button id="random-vocab-button">Random Vocab</button> -->
         <div id="create-card-modal">
             <form id="create-card-form">
-                <input type="text" placeholder="Enter Card Title Here">
-                <input type="text" placeholder="Enter Definition Here">
+                <input type="text" placeholder="Enter Card Title Here" id="new-card-title">
+                <input type="text" placeholder="Enter Definition Here" id="new-card-def">
                 <input type="submit">
             </form>
         </div>
-        <p>t</p>
-        <p>t</p>
-        <p>t</p>
         <form id="add-word-form">
             <input type="text" placeholder="Please type a word here!" id="add-word-input">
             <input  type="submit">
