refactored the seeAllCards event listener to work with new array of objects

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <input type="text" placeholder="Please type a word here!" id="add-word-input">
             <input  type="submit">
         </form>
-        <h3><span id="completion-count">0</span> / <span id="starting-amount-of-cards"></span> Complete</h3>
+        <h3><span id="completion-count">0</span> / <span id="total-number-of-cards"></span> Complete</h3>
         <div id="main-container">
             <button id="flashcard">
                 <ul id="flashcard-Ul">
