random word picker is working but there is a problem with it. The api does not always return the same data structure and this can cause problems on the return of data.

--- a/index.html
+++ b/index.html
@@ -15,25 +15,15 @@
                 <div id="bar2" class="bar"></div>
                 <div id="bar3" class="bar"></div>
             </div>
-            <!-- this is the nav for the hamburger menu. I am going to take a step back and plan out my next layout steps before going to far down any one rabbit hole 
-                <ul>
-                <li class="nav-items"><a href="#"></a>Home</li>
-                <li><a href="#"></a>Add Cards</li>
-                <li><a href="#"></a>Login</li>
-                <li><a href="#"></a>Help</li>
-            </ul>
-        </nav> -->
-        <!-- <nav>
+    <div id="menu modal">
 
-            <ul>
-                <li><a href="#">login</a></li>
-                <li><a href="#">help</a></li>
-            </ul>
-        </nav> -->
+    </div>
+
        
     </header>
     <main>
-        <!-- <button id="random-vocab-button">Random Vocab</button> -->
+        <button id="random-vocab-button">Random Vocab</button>
+
         <div id="create-card-modal">
             <form id="create-card-form">
                 <input type="text" placeholder="Enter Card Title Here" id="new-card-title">
@@ -44,6 +34,7 @@
         <form id="add-word-form">
             <input type="text" placeholder="Please type a word here!" id="add-word-input">
             <input  type="submit">
+    
         </form>
         <h3><span id="completion-count">0</span> / <span id="total-number-of-cards"></span> Complete</h3>
         <div id="main-container">
@@ -71,7 +62,7 @@
     <footer>
 
     </footer>
-
+<script src="./random-vocab.js"></script>
 <script src="./create-card.js"></script>
 <script src="./index.js"></script>
 <script src="/complete-cards-modal.js"></script>
