created a menu modal and have the random vocab link inside the modal.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
                 <div id="bar2" class="bar"></div>
                 <div id="bar3" class="bar"></div>
             </div>
-    <div id="menu modal">
+            
+        </nav>
+        <div id="menu-options-modal" class="hidden">
+            <div id="menu-options">
+                <ul>
+                    <li class="menu-item"><a href="#" id="random-vocab-button">Random Word</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Custom</a></li>
+                    <li><a href="#">Card List</a></li>
+                </ul>
+            </div>
+        </div>
 
-    </div>
+
 
        
     </header>
     <main>
-        <button id="random-vocab-button">Random Vocab</button>
 
         <div id="create-card-modal">
             <form id="create-card-form">
