working on styling: nav and modals

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="menu-item"><a href="#" id="random-vocab-button">Random Word</a></li>
                     <li><a href="#">Search</a></li>
                     <li><a href="#">Custom</a></li>
-                    <li><a href="#">Card List</a></li>
+                    <li><a href="#" id="see-all-cards-button">Card List</a></li>
                 </ul>
             </div>
         </div>
@@ -60,12 +60,13 @@
             <button id="next-button">></button>
         </div>
         
-        <button id="see-all-cards-button">See All Cards </button>
+        <button >See All Cards </button>
 
-        <div id="cards-list-modal">
-            <ul id="cards-list-ul">
-                
-            </ul>
+        <div class="model-bg">
+            <div id="cards-list-modal" >
+                <ul id="cards-list-ul">     
+                </ul>
+            </div>
         </div>
 
     </main>
