I have a issue with the drop down menus and will revert to a git commit before the issue

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                                     </div>
                                 </div>
                     <li><a href="#" id="see-all-cards-button">Card List</a></li>
-                                        <div class="container-center-card-list">
-                                            <div class="create-card-modal">
-                                                <ul id="cards-list-ul">
-                                                </ul>
-                                            </div>
-                                        </div>
-                </ul>
+                                <div class="container-center-card-list hidden">
+                                    <div class="card-list-modal">
+                                        <ul id="card-list-ul">
+
+                                        </ul>
+                                    </div>
+                                </div>
             </div>
         </div>
 
@@ -72,12 +72,6 @@
             <button id="next-button">></button>
         </div>
         
-        <button >See All Cards </button>
-
-
-
-  
-
 <script src="./random-vocab.js"></script>
 <script src="./create-card.js"></script>
 <script src="./index.js"></script>
