Got card list drop down  working

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <ul>
                     <li class="menu-item"><a href="#" id="random-vocab-button">Random Word</a></li>
 
-                    <li><a href="#" id="search-button">Search</a></li>
+                    <li class="menu-item"><a href="#" id="search-button">Search</a></li>
                         <div class="container-search hidden">
                             <div class="search-modal">
 
                             </div>
                         </div>
                     
-                    <li><a href="#" id="custom-button">Custom</a></li>
+                    <li class="menu-item"><a href="#" id="custom-button">Custom</a></li>
         <div class="container-center-custom hidden">
             <div id="create-card-modal"  >
                 <form id="create-card-form">
@@ -44,7 +44,7 @@
                 </form>
             </div>
         </div>
-                    <li><a href="#" id="card-list-button">Card List</a></li>
+                    <li class="menu-item"><a href="#" id="card-list-button">Card List</a></li>
                                 <div class="container-card-list hidden">
                                     <div id="cards-list-modal">
                                         <ul id="cards-list-ul">
@@ -86,10 +86,10 @@
     <footer>
 
     </footer>
-<script src="./seach-word.js"></script>
-<script src="./random-vocab.js"></script>
-<script src="./create-card.js"></script>
-<script src="./index.js"></script>
-<script src="/complete-cards-modal.js"></script>
+    <script src="./random-vocab.js"></script>
+    <script src="./create-card.js"></script>
+    <script src="./index.js"></script>
+    <script src="/complete-cards-modal.js"></script>
+    <script src="./seach-word.js"></script>
 </body>
 </html>
