--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         </div>
         <div id="card-controls-container">
             
-                <button class="control-buttons"id="previous-button"><</button>
+                <button class="control-buttons" id="previous-button">&#8592;</button>
                 <button class="control-buttons"id="got-it-button">GOT IT!</button>
-                <button class="control-buttons" id="next-button">></button>
+                <button class="control-buttons" id="next-button">&#8594;</button>
             
         </div>
 
