the complete-cards-modal.js wasnt loading. I think it is beacuse of a missing . befor the / of the pathway name. pushing and seeing if this fixes the issue

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="card-controls-container">
             
                 <button class="control-buttons" id="previous-button">&#8592;</button>
-                <button class="control-buttons"id="got-it-button">GOT IT!</button>
+                <button class="control-buttons" id="got-it-button">GOT IT!</button>
                 <button class="control-buttons" id="next-button">&#8594;</button>
             
         </div>
@@ -104,7 +104,8 @@
     <script src="./random-vocab.js"></script>
     <script src="./create-card.js"></script>
     <script src="./index.js"></script>
-    <script src="/complete-cards-modal.js"></script>
+    <script src="./complete-cards-modal.js"></script>
     <script src="./seach-word.js"></script>
+    <!-- favicon icon from https://www.favicon.cc/?action=icon&file_id=943190 Author: jeancava -->
 </body>
 </html>
