div was child of ul. This is not valid html. I place the div inside of a li that is child to a ul

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li class="menu-item"><a href="#" id="random-vocab-button">Random Word</a></li>
 
-                    <li class="menu-item"><a href="#" id="search-button">Search</a></li>
+                    <li class="menu-item"><a href="#" id="search-button">Search</a>
                         <div class="container-search hidden">
                             <div class="search-modal">
                                 <form id="add-word-form">
@@ -39,7 +39,8 @@
                                 </form>
                             </div>
                         </div>
-                    
+                    </li>
+
                     <li class="menu-item"><a href="#" id="custom-button">Custom</a></li>
         <div class="container-center-custom hidden">
             <div id="create-card-modal"  >
