div was child of ul. This is not valid html. I place the div inside of a li that is child to a ul. Fixed this issue for the custom search tab

--- a/index.html
+++ b/index.html
@@ -41,18 +41,19 @@
                         </div>
                     </li>
 
-                    <li class="menu-item"><a href="#" id="custom-button">Custom</a></li>
-        <div class="container-center-custom hidden">
-            <div id="create-card-modal"  >
-                <form id="create-card-form">
-                    <h3>Create</h3>
-                    <p>Please type your custome title and definition below!</p>
-                    <input type="text" placeholder="Enter Card Title Here" id="new-card-title" required>
-                    <input type="text" placeholder="Enter Definition Here" id="new-card-def" required>
-                    <input type="submit">
-                </form>
-            </div>
-        </div>
+                    <li class="menu-item"><a href="#" id="custom-button">Custom</a>
+                        <div class="container-center-custom hidden">
+                            <div id="create-card-modal"  >
+                                <form id="create-card-form">
+                                    <h3>Create</h3>
+                                    <p>Please type your custome title and definition below!</p>
+                                    <input type="text" placeholder="Enter Card Title Here" id="new-card-title" required>
+                                    <input type="text" placeholder="Enter Definition Here" id="new-card-def" required>
+                                    <input type="submit">
+                                </form>
+                            </div>
+                        </div>
+                    </li>
                     <li class="menu-item"><a href="#" id="card-list-button">Card List</a></li>
                                 <div class="container-card-list hidden">
                                     <div id="cards-list-modal">
