div was child of ul. This is not valid html. I place the div inside of a li that is child to a ul. Fixed this issue for the card list tab

--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                             </div>
                         </div>
                     </li>
-                    <li class="menu-item"><a href="#" id="card-list-button">Card List</a></li>
+                    <li class="menu-item"><a href="#" id="card-list-button">Card List</a>
                                 <div class="container-card-list hidden">
                                     <div id="cards-list-modal">
                                         <ul id="cards-list-ul">
                                         </ul>
                                     </div>
                                 </div>
+                    </li>
                 </ul>
             </div>
         </div>
