--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div id="create-card-modal"  >
                                 <form id="create-card-form">
                                     <h3>Create</h3>
-                                    <p>Please type your custome title and definition below!</p>
+                                    <p>Please type your custom title and definition below!</p>
                                     <input type="text" placeholder="Enter Card Title Here" id="new-card-title" required>
                                     <input type="text" placeholder="Enter Definition Here" id="new-card-def" required>
                                     <input type="submit">
